2015-01-12         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog: Reconstituted from diffs and log.

2015-01-09         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile, README, date.1, date.c, strftime.3, strftime.c: Converted
	the history over from RCS to git.
	* NOTES: Created.

2012-05-01         Arnold D. Robbins     <arnold@skeeve.com>

	Release 9.0 made.

	* README: Update date, note that we're now POSIX 2008 compatible.
	* date.1: It's POSIX 1003, not 1003.2 anymore.
	* date.c: Add more header files, use ANSI prototype. (January 2011).
	* strftime.3: Document POSIX extensions.
	* strftime.c (strftime): Add POSIX 2008 extensions, more
	system-specific ifdefs.
	(iso_8601_2000_year): New function.

2011-12-06         Arnold D. Robbins     <arnold@skeeve.com>

	* strftime.c: Sync with bash 4.2.20.

2011-01-24         Arnold D. Robbins     <arnold@skeeve.com>

	* strftime.c: Add ifdef for inline.
	(strftime): For 'z', tm_isdst < 0, break. For not HAVE_TZNAME,
	call gettimeofday(). Use %02ld for long value.

2011-01-13         Arnold D. Robbins     <arnold@skeeve.com>

	* date.c: Add more header files, use ANSI prototype.
	* strftime.c: Add HP/UX stuff.
	Fixes from Tanaka Akira <akr@m17n.org>, remove gawk stuff.
	(strftime): Make y (the year) a long. Adjust sprintf formats.
	Improve comments on preprocessor control lines.
	(isleap): Parameter is now a long.
	* date.1: Make POSIX uppercase (December, 2001).

2001-07-04         Arnold D. Robbins     <arnold@skeeve.com>

	Release 8.0 made.

	Update to C99 stuff.

	* README: Refer to ISO C instead of ANSI C.
	* date.1: Adjust email address formatting.
	* strftime.3: Updated to reflect source from 1999 (draft) standard.
	Text adjusted and improved. ISO 8601 format documented. Lots more.
	* strftime.c: ISO instead of ANSI. Move to prototypes. More doc.
	C 99 formats added. (Many moved from what were extensions.)

2000-09-13         Arnold D. Robbins     <arnold@skeeve.com>
